@@ -1,4 +1,8 @@
 2006-12-27  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c: Don't repport error for many run in a day if
+			       it's amflush.
+
+2006-12-27  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/util.c (quote_string): Escape '\' character.
 
 2006-12-22  Jean-Louis Martineau <martineau@zmanda.com>
